Sat Feb  5 10:55:00 UTC 2011  John-Mark Bell  <jmb@netsurf-browser.org>

	* module/sul.s: Test the existence of the canonicalised	filename on
	program initialisation, rather than the original sul_exec() argument. 
	Fixes detection of child application that lives on Run$Path. 
	Additionally, fix stripping of FS name in process structure search to
	accept the program name provided by OS_GetEnv having no colons in it 
	(e.g. when it resides on RPCEmu's HostFS). Otherwise, it will skip over
	the first entry in the process list without considering it. 
	Bump version number and update copyright years.

Wed Feb  2 00:29:05 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* Makefile.am: Avoid overruling targets needing custom CFLAGS by
	splitting libunixlib in two libraries.

Tue Jan 25 19:59:02 2011  Lee Noar  <leenoar@sky.com>

	* scl/chunkid01.s: Make sure bss section has word alignment.
	* scl/chunkid02.s: Likewise.

Sun Jan 23 19:02:26 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* kernel/kosfile.s (_kernel_osfile): Fix based on the fact that 2nd
	parameter can not be NULL.

Mon Jan 17 23:11:28 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* COPYING: Update copyright year.
	* crypt/crypt-entry.c: Poison for SCL build.
	* crypt/md5.c,crypt/md5-crypt.c,fenv/fclrexcpt.c,fenv/fedisblxcpt.c,
	fenv/feenablxcpt.c,fenv/fegetenv.c,fenv/fegetexcept.c,
	fenv/fegetround.c,fenv/feholdexcpt.c,fenv/fesetenv.c,fenv/fesetround.c,
	fenv/fraiseexcpt.c,fenv/fsetexcptflg.c,fenv/ftestexcept.c,
	gmon/gmon-start.c,gmon/profil.c,misc/dirname.c,netlib/ul_in6_addr.c,
	resolv/ul_opensock.c,resolv/ul_res_hconf.c,search/hsearch.c,
	search/insremque.c,search/lsearch.c,search/tsearch.c,signal/sleep.c,
	stdlib/msort.c,stdlib/xpg_basename.c,string/basename.c,string/memrchr.c,
	string/rawmemchr.c,string/strchrnul.c,string/strndup.c,string/strnlen.c,
	string/swab.c,sys/alarm.c,unistd/getpass.c,unistd/lockf.c,unix/getopt1.c,
	unix/getopt.c,unix/pselect.c,wchar/btowc.c,wchar/mbrlen.c,wchar/mbrtowc.c,